--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <p>Utilize a chave abaixo para realizar sua doação:</p>
         <input type="text" value="animaiscomunitariosufpb@gmail.com" id="chavePix" readonly> <br>
         <button onclick="copiarChave()">Copiar</button>
+        <div class="logos">
+            <img class="logoprobex" src="./imagens/proex_colorido-quadrado.png" alt="logoprobex">
+            <img src="./imagens/image.png" alt="logoUFPB">  
+          </div>
     </div>
 
     <script>
